[package]
name = "dapt"
version = "0.1.0"
edition = "2021"
description = "serializing and unseralizing unstructured data"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
base64 = "0.21.5"
byteorder = "1.5.0"
regex = "1.10.4"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.115"
