[package]
name = "dapt"
version = "0.1.8"
edition = "2021"
description = "serializing and unseralizing unstructured data"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
base64 = "0.21.5"
byteorder = "1.5.0"
cityhash = "0.1.1"
dyn-clone = "1.0.17"
parse_duration = "2.1.1"
regex = "1.10.4"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rayon = "1.10.0"
serde_cbor = "0.11.2"
serde_yaml = "0.9.34"

[[bench]]
name = "bench"
harness = false
